# mttyd

./: .gitignore  .verify.yaml  README.md  mttyd.example.yaml  phonetty.example.yaml  pyproject.toml
.github/workflows/: ci.yml
mttyd/: __init__.py  history.py  server.py
mttyd/static/: term.html
phonetty/: __init__.py  history.py  server.py
phonetty/static/: term.html
tests/: test_e2e_playwright.py  test_history.py  test_server.py  test_wrapper_script.py
tmux/: pwa-claude-inner.sh  pwa-claude-tmux  tmux.conf
