[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mttyd"
version = "0.1.0"
description = "Mobile-friendly wrapper around ttyd — touch scroll, command bar, tmux scrollback replay."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Jeremiah Mackey" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pyyaml>=6.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals",
]

[project.optional-dependencies]
test = ["pytest>=7", "httpx>=0.27", "ruff>=0.4"]
# Browser end-to-end tests (headless Chromium via Playwright). After
# installing, run `playwright install chromium` once to fetch the browser.
e2e = ["pytest>=7", "pytest-playwright>=0.5", "websockets>=12"]

[project.scripts]
mttyd = "mttyd.server:main"

[project.urls]
Homepage = "https://github.com/JeremiahM37/mttyd"

[tool.pytest.ini_options]
# Deselect the browser e2e tests by default so the unit suite (and the
# .verify.yaml `pytest -q` step) stays fast and network-independent.
# Run them explicitly with `pytest -m e2e`.
addopts = "-m 'not e2e'"
markers = [
    "e2e: browser end-to-end tests driving headless Chromium via Playwright",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# Defaults (pyflakes + pycodestyle errors) — enough to catch real breakage
# without imposing a style regime on a small codebase.
select = ["E", "F", "W"]

[tool.setuptools.packages.find]
include = ["mttyd*"]

[tool.setuptools.package-data]
mttyd = ["static/*.html", "static/vendor/*"]
